--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -123,5 +123,8 @@
         <a [routerLink]="['/settings']" [routerLinkActive]="['router-link-active']" class="list-group-item">
             <i class="fa fa-cogs"></i>&nbsp;{{ 'Ajustes' | translate }}
         </a>
+        <a [routerLink]="['/admin-panel']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+            <i class="fa fa-sliders"></i>&nbsp;{{ 'Admin Panel' | translate }}
+        </a>
     </ul>
 </nav>
