--- a/src/app/layout/ingreso-vehiculos/ingreso-vehiculos.component.html
+++ b/src/app/layout/ingreso-vehiculos/ingreso-vehiculos.component.html
@@ -16,7 +16,7 @@
                 <div class="col-sm-6"
                      [ngClass]="{'has-danger': !patente.valid && (!patente.pristine || patente.touched || submitted),
                 'has-success': patente.valid}">
-                    <input type="text" class="form-control has-feedback" id="ingreso-patente" name="patente" (ngModel)="vehiculo.patente" #patente="ngModel" required [maxLength]="191" placeholder="Patente">
+                    <input type="text" class="form-control has-feedback" id="ingreso-patente" name="patente" [(ngModel)]="vehiculo.patente" #patente="ngModel" required [maxLength]="191" placeholder="Patente">
                     <span *ngIf="patente.valid" class="form-control-feedback"></span>
                     <span *ngIf="patente.errors !== null && (!patente.pristine || patente.touched || submitted)" class="form-control-feedback"></span>
                     <div *ngIf="!patente.valid && (!patente.pristine || patente.touched || submitted)" class="has-danger form-control-feedback"> *Ingrese la patente</div>
@@ -25,8 +25,11 @@
         </div>
 
         <div class="card mb-3 form-group">
-            <div class="card-header">Datos adicionales</div>
-            <div class="card-block row">
+
+            <!--TODO: agregar algun efecto -->
+            <a class="opt-data-header" (click)="toggleShowOptional()"><div class="card-header">Datos adicionales</div></a>
+
+            <div [hidden]="!showOptional" class="card-block row">
                 <div class="col-lg-6">
                     <h5 class="col-sm-12 text-center" >Datos del Vehiculo</h5>
                     <hr>
@@ -85,7 +88,7 @@
 
 
         <div class="modal-footer">
-            <!--<button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>-->
+            <button type="button" class="btn btn-default" (click)="onCleanClicked()">Limpiar</button>
             <button type="submit" class="btn btn-primary btn-submit" (click)="onSubmitClicked()">Guardar</button>
         </div>
     </div>
