--- a/src/app/layout/ingreso-vehiculos/ingreso-vehiculos.component.scss
+++ b/src/app/layout/ingreso-vehiculos/ingreso-vehiculos.component.scss
@@ -4,4 +4,10 @@ app-ingreso-vehiculos {
         align-self: center;
     }
 
+    .opt-data-header {
+        display: block;
+        height: 100%;
+        width: 100%;
+        text-decoration: none;
+    }
 }
