--- a/src/app/layout/settings/settings.component.html
+++ b/src/app/layout/settings/settings.component.html
@@ -1,7 +1,7 @@
 <app-page-header [heading]="'Ajustes'" [icon]="'fa-cogs'"></app-page-header>
 
 <div class="card mb-3">
-    <div class="card-header">Datos del Parque</div>
+    <div class="card-header custom-card-header-main">Datos del Parque</div>
     <div class="card-block">
         <form class="form-horizontal" #f="ngForm">
 
