--- a/src/app/layout/historial-ingresos-egresos/historial-ingresos-egresos.component.scss
+++ b/src/app/layout/historial-ingresos-egresos/historial-ingresos-egresos.component.scss
@@ -71,3 +71,14 @@ table.dataTable thead > tr > td.sorting_desc,
 table.dataTable thead > tr > td.sorting {
     padding-right: inherit;
 }
+
+.inverse-custom {
+    background-color: #256ab0;
+    color: white;
+    font-weight: bold;
+    text-align: center;
+}
+
+table tr td {
+    font-size: 0.9em;
+}
