--- a/src/app/layout/ingreso-vehiculos/ingreso-vehiculos.component.html
+++ b/src/app/layout/ingreso-vehiculos/ingreso-vehiculos.component.html
@@ -3,16 +3,16 @@
     <div class="modal-body">
 
         <ngb-alert type="success" (close)="close = true" *ngIf="submittedExitoso && !close" >
-            <strong>Ingreso Exitoso!</strong> El ingreso del vehículo con patente {{patente}} fue marcado exitosamente.
+            <strong>Ingreso Exitoso!</strong> El ingreso del vehículo fue marcado exitosamente.
         </ngb-alert>
-        <ngb-alert type="danger" (close)="close = true" *ngIf="submittedExitoso && !close" >
-            <strong>Ingreso Fallido!</strong> El ingreso del vehículo con patente {{patente}} falló.
+        <ngb-alert type="danger" (close)="close = true" *ngIf="submittedFallido && !close" >
+            <strong>Ingreso Fallido!</strong> El ingreso del vehículo falló.
         </ngb-alert>
 
         <div class="card mb-3 form-group">
-            <div class="card-header">Datos obligatorios</div>
+            <div class="card-header custom-card-header-main">Datos obligatorios</div>
             <div class="card-block row">
-                <label for="ingreso-patente" class="col-sm-3 required control-label text-center">Patente</label>
+                <label for="ingreso-patente" class="col-sm-3 required control-label text-right"><h3>Patente </h3></label>
                 <div class="col-sm-6"
                      [ngClass]="{'has-danger': !patente.valid && (!patente.pristine || patente.touched || submitted),
                 'has-success': patente.valid}">
@@ -30,7 +30,7 @@
         <div class="card mb-3 form-group">
 
             <!--TODO: agregar algun efecto -->
-            <a class="opt-data-header" (click)="toggleShowOptional()"><div class="card-header">Datos adicionales</div></a>
+            <a class="opt-data-header" (click)="toggleShowOptional()"><div class="card-header custom-card-header-opt">Datos adicionales</div></a>
 
             <div [hidden]="!showOptional" class="card-block row">
                 <div class="col-lg-6">
@@ -46,7 +46,7 @@
                     </div>
 
                     <div class="form-group row">
-                        <label for="ingreso-aniovehiculo" class="col-sm-3 required control-label text-center">Color</label>
+                        <label for="ingreso-aniovehiculo" class="col-sm-3 required control-label text-center">Año</label>
                         <div class="col-sm-9">
                             <input class="form-control has-feedback" id="ingreso-aniovehiculo" name="aniovehiculo" [(ngModel)]="ing.anioVehiculo"
                                    #aniovehiculo="ngModel" placeholder="Año del vehículo">
@@ -95,9 +95,9 @@
         </div>
 
 
-        <div class="modal-footer">
-            <button type="button" class="btn btn-default" (click)="onCleanClicked()">Limpiar</button>
-            <button type="submit" class="btn btn-primary btn-submit" (click)="onSubmitClicked()">Guardar</button>
+        <div class="modal-footer custom-modal-footer">
+            <button type="button" class="btn custom-btn btn-default" (click)="onCleanClicked()">LIMPIAR</button>
+            <button type="submit" class="btn custom-btn btn-primary btn-success" (click)="onSubmitClicked()">GUARDAR</button>
         </div>
     </div>
 </form>
