--- a/src/app/layout/historial-ingresos-egresos/historial-ingresos-egresos.component.html
+++ b/src/app/layout/historial-ingresos-egresos/historial-ingresos-egresos.component.html
@@ -4,15 +4,19 @@
     </div>
 </div>
 
+<div>
+    <!--TODO aca poner un div con todos los filtros (DatePickers, checkbox, input...)-->
+</div>
+
 <table datatable class="row-border hover table" id="table" [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" [hidden]="ocultarTabla">
     <thead class="inverse-custom">
         <tr>
             <th>#</th>
             <th>Patente</th>
-            <th>Monto abonado</th>
             <th>Fecha y Hora ingreso</th>
             <th>Fecha y Hora egreso</th>
             <th>Marcó salida?</th>
+            <th>Monto abonado</th>
             <th>Email del Cliente</th>
             <th>Acciones</th>
         </tr>
@@ -21,10 +25,10 @@
         <tr *ngFor="let transaccion of historial; let i = index" style="text-align: center;">
             <td>{{historial.length - i}}</td>
             <td>{{transaccion.vehiculoEstacionado.patente}}</td>
-            <td>{{transaccion.marcoSalidaDelParque? '$35' : '-'}}</td>
             <td>{{transaccion.fechaIngreso}}</td>
             <td>{{transaccion.marcoSalidaDelParque? transaccion.fechaEgreso : '-'}}</td>
             <td>{{transaccion.marcoSalidaDelParque? 'Salió' : 'En parque'}}</td>
+            <td>{{transaccion.marcoSalidaDelParque? '$35' : '-'}}</td>
             <td>{{transaccion.vehiculoEstacionado.ownerVehiculo?.email? transaccion.vehiculoEstacionado.ownerVehiculo.email : '-'}}</td>
             <td>
                 <button class="fa fa-pencil blue"></button >
