--- a/src/app/layout/dashboard/components/chart/chart.component.html
+++ b/src/app/layout/dashboard/components/chart/chart.component.html
@@ -1,6 +1,6 @@
 <div>
     <div class="card mb-3">
-        <div class="card-header">
+        <div class="card-header custom-card-header-main">
             Gráfico de líneas
         </div>
         <div class="card-block">
