--- a/src/app/layout/dashboard/dashboard.component.scss
+++ b/src/app/layout/dashboard/dashboard.component.scss
@@ -7,3 +7,16 @@
 .spinner-dashboard-tables {
     padding: 10%;
 }
+
+.stats-content {
+    float: right;
+    font-weight: bold;
+}
+
+.card-success,
+.card-danger,
+.card-primary,
+.card-info {
+    color: #fff;
+    font-weight: bold;
+}
