--- a/src/app/layout/ingreso-vehiculos/ingreso-vehiculos.component.scss
+++ b/src/app/layout/ingreso-vehiculos/ingreso-vehiculos.component.scss
@@ -19,7 +19,7 @@
 }
 
 .custom-card-header-main {
-    background-color: #256ab0;
+    background-color: rgba(0, 71, 194, 0.75);
     color: white;
     font-weight: bold;
 }
