--- a/src/app/layout/historial-ingresos-egresos/historial-ingresos-egresos.component.scss
+++ b/src/app/layout/historial-ingresos-egresos/historial-ingresos-egresos.component.scss
@@ -73,7 +73,7 @@ table.dataTable thead > tr > td.sorting {
 }
 
 .inverse-custom {
-    background-color: #256ab0;
+    background-color: rgba(0, 71, 194, 0.75);
     color: white;
     font-weight: bold;
     text-align: center;
