--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header [user]="user.nombre + ' ' + user.apellido"></app-header>
 <app-sidebar></app-sidebar>
 <section class="main-container">
     <router-outlet></router-outlet>
