--- a/src/app/layout/dashboard/components/notification/notification.component.html
+++ b/src/app/layout/dashboard/components/notification/notification.component.html
@@ -1,23 +1,23 @@
 
     <div class="list-group">
         <a href="#" class="list-group-item clearfix d-block">
-            <i class="fa fa-comment fa-fw"></i> New Comment
-            <span class="float-right text-muted small"><em>4 minutes ago</em></span>
+            <i class="fa fa-car fa-fw"></i> Nuevo ingreso de vehículo
+            <span class="float-right text-muted small"><em>hace 4 minutos</em></span>
         </a>
         <a href="#" class="list-group-item clearfix d-block">
-            <i class="fa fa-twitter fa-fw"></i> 3 New Followers
-            <span class="float-right text-muted small"><em>12 minutes ago</em></span>
+            <i class="fa fa-mobile fa-fw"></i> Solicitud de reserva
+            <span class="float-right text-muted small"><em>hace 15 minutos</em></span>
         </a>
         <a href="#" class="list-group-item clearfix d-block">
-            <i class="fa fa-envelope fa-fw"></i> Message Sent
-            <span class="float-right text-muted small"><em>27 minutes ago</em></span>
+            <i class="fa fa-dollar fa-fw"></i> Nuevo egreso de vehículo
+            <span class="float-right text-muted small"><em>hace 21 minutos</em></span>
         </a>
         <a href="#" class="list-group-item clearfix d-block">
-            <i class="fa fa-tasks fa-fw"></i> New Task
-            <span class="float-right text-muted small"><em>43 minutes ago</em></span>
+            <i class="fa fa-car fa-fw"></i> Nuevo ingreso de vehículo
+            <span class="float-right text-muted small"><em>hace 43 minutos</em></span>
         </a>
         <a href="#" class="list-group-item clearfix d-block">
-            <i class="fa fa-upload fa-fw"></i> Server Rebooted
+            <i class="fa fa-comments fa-fw"></i> Un usuario ha evaluado tu Parque!
             <span class="float-right text-muted small"><em>11:32 AM</em></span>
         </a>
     </div>
