Notificaciones por email - Ingresos activos

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -67,7 +67,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="javascript:void(0)">
+                        <a [routerLink]="['/ingreso-egreso/notificar']" [routerLinkActive]="['router-link-active']">
                             <i class="fa fa-bell"></i>&nbsp;{{ 'Emitir notificacion' | translate }}
                         </a>
                     </li>
